# solana-plugin-redis

./: Cargo.toml  README.md
scripts/: create_schema.sql  drop_schema.sql
src/: geyser_plugin_postgres.rs  geyser_plugin_redis.rs  lib.rs  postgres_client.rs  redis_client.rs
src/postgres_client/: postgres_client_block_metadata.rs  postgres_client_transaction.rs
src/redis_client/: redis_client_transaction.rs
