[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-geyser-plugin-postgres"
description = "The Solana AccountsDb plugin for PostgreSQL database."
version = "1.17.3"
repository = "https://github.com/solana-labs/solana-accountsdb-plugin-postgres"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-validator"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.5.1"
bytemuck = "1.12.1"
chrono = { version = "0.4.24", features = ["serde"] }
crossbeam-channel = "0.5.7"
log = "0.4.17"
postgres = { version = "0.19.4", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.4", features = ["derive"] }
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
agave-geyser-plugin-interface = "=2.0.15"
solana-logger = { version = "2.0.15" }
solana-measure = { version = "2.0.15" }
solana-metrics = { version = "2.0.15" }
solana-runtime = { version = "2.0.15" }
solana-sdk = { version = "2.0.15" }
solana-transaction-status = { version = "2.0.15" }
thiserror = "2.0.3"
tokio-postgres = "0.7.12"
redis = { version = "0.27.5", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
libc = "0.2.134"
libloading = "0.8.5"
serial_test = "3.2.0"
socket2 = { version = "0.5.7", features = ["all"] }

solana-account-decoder = { version = "2.0.15" }
solana-core = { version = "2.0.15" }
solana-local-cluster = { version = "2.0.15" }
solana-net-utils = { version = "2.0.15" }
solana-streamer = { version = "2.0.15" }
tempfile = "3.3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
